Alteração no background da página

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site para teste de conhecimentos sobre git">
     <meta name="keywords" content="estudos de git,html5,css3,javascript">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/estiliacao.css">
+    <title>Estudos de Repositório</title>
 </head>
 <body>
     
