Adição da data e horário da página

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="keywords" content="estudos de git,html5,css3,javascript">
     <link rel="stylesheet" href="css/estiliacao.css">
     <title>Estudos de Repositório</title>
+    <script src="js/hratual.js" defer></script>
 </head>
 <body>
-    
+    <div id="hr"></div>
 </body>
 </html>
